finished side column

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                 <!-- side column bar -->
                 <nav class="sidebar">
                     <ul class="side-nav">
-                        <li class="side-nav__item">
+                        <!-- we put this to active because we show that this link is active, look at the SCSS code as well -->
+                        <li class="side-nav__item side-nav__item--active">
                             <a href="#" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-home3"></use>
